--- a/Calendar/calendar.ui
+++ b/Calendar/calendar.ui
@@ -31,8 +31,8 @@
      <rect>
       <x>0</x>
       <y>0</y>
-      <width>559</width>
-      <height>435</height>
+      <width>625</width>
+      <height>441</height>
      </rect>
     </property>
     <layout class="QVBoxLayout" name="verticalLayout_main">
@@ -53,6 +53,11 @@
       <layout class="QHBoxLayout" name="horizontalLayout_2">
        <item>
         <widget class="QLabel" name="label_2">
+         <property name="font">
+          <font>
+           <pointsize>14</pointsize>
+          </font>
+         </property>
          <property name="text">
           <string>Selected:</string>
          </property>
@@ -68,6 +73,7 @@
          </property>
          <property name="font">
           <font>
+           <pointsize>14</pointsize>
            <bold>true</bold>
           </font>
          </property>
@@ -77,7 +83,24 @@
         </widget>
        </item>
        <item>
+        <widget class="QLabel" name="label_vecSize_2">
+         <property name="font">
+          <font>
+           <pointsize>14</pointsize>
+          </font>
+         </property>
+         <property name="text">
+          <string>events today:</string>
+         </property>
+        </widget>
+       </item>
+       <item>
         <widget class="QLabel" name="label_vecSize">
+         <property name="font">
+          <font>
+           <pointsize>14</pointsize>
+          </font>
+         </property>
          <property name="text">
           <string>TextLabel</string>
          </property>
@@ -95,6 +118,7 @@
            </property>
            <property name="font">
             <font>
+             <pointsize>14</pointsize>
              <bold>false</bold>
             </font>
            </property>
@@ -105,6 +129,11 @@
          </item>
          <item>
           <widget class="QLabel" name="label_page">
+           <property name="font">
+            <font>
+             <pointsize>14</pointsize>
+            </font>
+           </property>
            <property name="text">
             <string>0</string>
            </property>
@@ -115,6 +144,11 @@
          </item>
          <item>
           <widget class="QPushButton" name="pushButton_nextPage">
+           <property name="font">
+            <font>
+             <pointsize>14</pointsize>
+            </font>
+           </property>
            <property name="text">
             <string>&gt;</string>
            </property>
@@ -128,6 +162,11 @@
       <layout class="QHBoxLayout" name="horizontalLayout_data_1">
        <item>
         <widget class="QLabel" name="label_tipo_1">
+         <property name="font">
+          <font>
+           <pointsize>14</pointsize>
+          </font>
+         </property>
          <property name="text">
           <string>TextLabel</string>
          </property>
@@ -141,6 +180,11 @@
            <verstretch>0</verstretch>
           </sizepolicy>
          </property>
+         <property name="font">
+          <font>
+           <pointsize>14</pointsize>
+          </font>
+         </property>
          <property name="text">
           <string>TextLabel</string>
          </property>
@@ -148,6 +192,11 @@
        </item>
        <item>
         <widget class="QLabel" name="label_start_1">
+         <property name="font">
+          <font>
+           <pointsize>14</pointsize>
+          </font>
+         </property>
          <property name="text">
           <string>TextLabel</string>
          </property>
@@ -155,6 +204,11 @@
        </item>
        <item>
         <widget class="QLabel" name="label_end_1">
+         <property name="font">
+          <font>
+           <pointsize>14</pointsize>
+          </font>
+         </property>
          <property name="text">
           <string>TextLabel</string>
          </property>
@@ -162,6 +216,11 @@
        </item>
        <item>
         <widget class="QLabel" name="label_ripetizione_1">
+         <property name="font">
+          <font>
+           <pointsize>14</pointsize>
+          </font>
+         </property>
          <property name="text">
           <string>TextLabel</string>
          </property>
@@ -169,6 +228,11 @@
        </item>
        <item>
         <widget class="QPushButton" name="pushButton_edit_1">
+         <property name="font">
+          <font>
+           <pointsize>14</pointsize>
+          </font>
+         </property>
          <property name="text">
           <string>Edit</string>
          </property>
@@ -176,6 +240,11 @@
        </item>
        <item>
         <widget class="QPushButton" name="pushButton_delete_1">
+         <property name="font">
+          <font>
+           <pointsize>14</pointsize>
+          </font>
+         </property>
          <property name="text">
           <string>Delete</string>
          </property>
@@ -187,6 +256,11 @@
       <layout class="QHBoxLayout" name="horizontalLayout_data_2">
        <item>
         <widget class="QLabel" name="label_tipo_2">
+         <property name="font">
+          <font>
+           <pointsize>14</pointsize>
+          </font>
+         </property>
          <property name="text">
           <string>TextLabel</string>
          </property>
@@ -194,6 +268,11 @@
        </item>
        <item>
         <widget class="QLabel" name="label_descrizione_2">
+         <property name="font">
+          <font>
+           <pointsize>14</pointsize>
+          </font>
+         </property>
          <property name="text">
           <string>TextLabel</string>
          </property>
@@ -201,6 +280,11 @@
        </item>
        <item>
         <widget class="QLabel" name="label_start_2">
+         <property name="font">
+          <font>
+           <pointsize>14</pointsize>
+          </font>
+         </property>
          <property name="text">
           <string>TextLabel</string>
          </property>
@@ -208,6 +292,11 @@
        </item>
        <item>
         <widget class="QLabel" name="label_end_2">
+         <property name="font">
+          <font>
+           <pointsize>14</pointsize>
+          </font>
+         </property>
          <property name="text">
           <string>TextLabel</string>
          </property>
@@ -215,6 +304,11 @@
        </item>
        <item>
         <widget class="QLabel" name="label_ripetizione_2">
+         <property name="font">
+          <font>
+           <pointsize>14</pointsize>
+          </font>
+         </property>
          <property name="text">
           <string>TextLabel</string>
          </property>
@@ -222,6 +316,11 @@
        </item>
        <item>
         <widget class="QPushButton" name="pushButton_edit_2">
+         <property name="font">
+          <font>
+           <pointsize>14</pointsize>
+          </font>
+         </property>
          <property name="text">
           <string>Edit</string>
          </property>
@@ -229,6 +328,11 @@
        </item>
        <item>
         <widget class="QPushButton" name="pushButton_delete_2">
+         <property name="font">
+          <font>
+           <pointsize>14</pointsize>
+          </font>
+         </property>
          <property name="text">
           <string>Delete</string>
          </property>
@@ -240,6 +344,11 @@
       <layout class="QHBoxLayout" name="horizontalLayout_data_3">
        <item>
         <widget class="QLabel" name="label_tipo_3">
+         <property name="font">
+          <font>
+           <pointsize>14</pointsize>
+          </font>
+         </property>
          <property name="text">
           <string>TextLabel</string>
          </property>
@@ -247,6 +356,11 @@
        </item>
        <item>
         <widget class="QLabel" name="label_descrizione_3">
+         <property name="font">
+          <font>
+           <pointsize>14</pointsize>
+          </font>
+         </property>
          <property name="text">
           <string>TextLabel</string>
          </property>
@@ -254,6 +368,11 @@
        </item>
        <item>
         <widget class="QLabel" name="label_start_3">
+         <property name="font">
+          <font>
+           <pointsize>14</pointsize>
+          </font>
+         </property>
          <property name="text">
           <string>TextLabel</string>
          </property>
@@ -261,6 +380,11 @@
        </item>
        <item>
         <widget class="QLabel" name="label_end_3">
+         <property name="font">
+          <font>
+           <pointsize>14</pointsize>
+          </font>
+         </property>
          <property name="text">
           <string>TextLabel</string>
          </property>
@@ -268,6 +392,11 @@
        </item>
        <item>
         <widget class="QLabel" name="label_ripetizione_3">
+         <property name="font">
+          <font>
+           <pointsize>14</pointsize>
+          </font>
+         </property>
          <property name="text">
           <string>TextLabel</string>
          </property>
@@ -275,6 +404,11 @@
        </item>
        <item>
         <widget class="QPushButton" name="pushButton_edit_3">
+         <property name="font">
+          <font>
+           <pointsize>14</pointsize>
+          </font>
+         </property>
          <property name="text">
           <string>Edit</string>
          </property>
@@ -282,6 +416,11 @@
        </item>
        <item>
         <widget class="QPushButton" name="pushButton_delete_3">
+         <property name="font">
+          <font>
+           <pointsize>14</pointsize>
+          </font>
+         </property>
          <property name="text">
           <string>Delete</string>
          </property>
@@ -296,6 +435,11 @@
        </property>
        <item>
         <widget class="QComboBox" name="comboBox_evento">
+         <property name="font">
+          <font>
+           <pointsize>14</pointsize>
+          </font>
+         </property>
          <item>
           <property name="text">
            <string>Attivita</string>
@@ -309,19 +453,47 @@
         </widget>
        </item>
        <item>
-        <widget class="QLineEdit" name="lineEdit"/>
+        <widget class="QLineEdit" name="lineEdit">
+         <property name="font">
+          <font>
+           <pointsize>14</pointsize>
+          </font>
+         </property>
+        </widget>
        </item>
        <item>
-        <widget class="QTimeEdit" name="timeEdit_start"/>
+        <widget class="QTimeEdit" name="timeEdit_start">
+         <property name="font">
+          <font>
+           <pointsize>14</pointsize>
+          </font>
+         </property>
+        </widget>
        </item>
        <item>
-        <widget class="QTimeEdit" name="timeEdit_end"/>
+        <widget class="QTimeEdit" name="timeEdit_end">
+         <property name="font">
+          <font>
+           <pointsize>14</pointsize>
+          </font>
+         </property>
+        </widget>
        </item>
        <item>
         <widget class="QComboBox" name="comboBox_ripetizione">
+         <property name="font">
+          <font>
+           <pointsize>14</pointsize>
+          </font>
+         </property>
          <item>
           <property name="text">
            <string>-</string>
+          </property>
+         </item>
+         <item>
+          <property name="text">
+           <string>Settimanale</string>
           </property>
          </item>
          <item>
@@ -338,12 +510,33 @@
        </item>
        <item>
         <widget class="QPushButton" name="pushButton">
+         <property name="font">
+          <font>
+           <pointsize>14</pointsize>
+          </font>
+         </property>
          <property name="text">
           <string>Create</string>
          </property>
         </widget>
        </item>
       </layout>
+     </item>
+     <item>
+      <spacer name="verticalSpacer">
+       <property name="orientation">
+        <enum>Qt::Vertical</enum>
+       </property>
+       <property name="sizeType">
+        <enum>QSizePolicy::Fixed</enum>
+       </property>
+       <property name="sizeHint" stdset="0">
+        <size>
+         <width>20</width>
+         <height>20</height>
+        </size>
+       </property>
+      </spacer>
      </item>
     </layout>
    </widget>
